--- a/client/App/App.html
+++ b/client/App/App.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
-  <title>React-Meteor</title>
-  <meta name="description" content="A simple todo list with some extras.">
+  <title>Meteor React Template App</title>
+  <meta name="description" content="Template App using Meteor 1.3 & React 0.15">
 </head>
 
 <body>
