--- a/client/App/App.html
+++ b/client/App/App.html
@@ -1,7 +1,8 @@
 <head>
   <meta charset="utf-8">
   <title>Meteor React Template App</title>
-  <meta name="description" content="Template App using Meteor 1.3 & React 0.15">
+  <meta name="description" content="Template App using Meteor 1.3 & React 0.15">  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
+
 </head>
 
 <body>
