--- a/client/App/App.html
+++ b/client/App/App.html
@@ -1,14 +1,12 @@
 <head>
   <meta charset="utf-8">
   <title>Meteor React Template App</title>
-  <meta name="description" content="Template App using Meteor 1.3 & React 0.15">  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
-  <meta name="keywords" content="boilerplate app, app, template, react, meteor, meteor 1.3, react-router, page animations" />
+  <meta name="description" content="Template App using Meteor 1.3 & React">  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
+  <meta name="keywords" content="boilerplate app, app, template, react, meteor, madeinmoon, Made In Moon, meteor 1.3, react-router, page animations" />
   <meta name="author" content="MadeInMoon" />
   <link rel="icon" href="/favicon.png">
 </head>
 
 <body>
   <div id="App-wrapper"></div>
-  
-<!--  <script src="lib/ui/swipper/swiper.js"></script>-->
 </body>
