account components : reorganization

--- a/client/App/App.html
+++ b/client/App/App.html
@@ -1,13 +1,12 @@
 <head>
   <meta charset="utf-8">
-  <title>Meteor React Template App</title>
-  <meta name="description" content="Template App using Meteor 1.3 & React">  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
-  <meta name="keywords" content="boilerplate app, app, template, react, meteor, madeinmoon, Made In Moon, meteor 1.3, react-router, page animations" />
-  <meta name="author" content="MadeInMoon" />
+  <title>Meteor React Template App (Made In Moon)</title>
+  <meta name="description" content="Template App using meteor 1.3, react, react-router(with page transitions) & material-ui">  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
+  <meta name="keywords" content="boilerplate app, app, template, react, meteor, madeinmoon, Made In Moon, meteor 1.3, react-router, page animations, page transitions" />
+  <meta name="author" content="Made In Moon" />
   <link rel="icon" href="/favicon.png">
 </head>
 
 <body>
   <div id="App-wrapper"></div>
-  <div id="resetForgotPassword-wrapper"></div>
 </body>
